Source/WebCore/platform/graphics/LayoutRect.h
@@ -56,7 +56,7 @@ public:
     LayoutSize size() const { return m_size; }
 
     IntPoint pixelSnappedLocation() const { return roundedIntPoint(m_location); }
-    IntSize pixelSnappedSize() const { return IntSize(snapSizeToPixel(m_size.width(), m_location.x()), snapSizeToPixel(m_size.height(), m_location.y())); }
+    IntSize pixelSnappedSize() const { return snappedIntSize(m_size, m_location); }
 
     void setLocation(const LayoutPoint& location) { m_location = location; }
     void setSize(const LayoutSize& size) { m_size = size; }
@@ -70,8 +70,8 @@ public:
 
     int pixelSnappedX() const { return x().round(); }
     int pixelSnappedY() const { return y().round(); }
-    int pixelSnappedWidth() const { return snapSizeToPixel(width(), x()); }
-    int pixelSnappedHeight() const { return snapSizeToPixel(height(), y()); }
+    int pixelSnappedWidth() const { return snappedIntSize(m_size, m_location).width(); }
+    int pixelSnappedHeight() const { return snappedIntSize(m_size, m_location).height(); }
     int pixelSnappedMaxX() const { return (m_location.x() + m_size.width()).round(); }
     int pixelSnappedMaxY() const { return (m_location.y() + m_size.height()).round(); }
 
@@ -206,30 +206,29 @@ WEBCORE_EXPORT LayoutRect enclosingLayoutRect(const FloatRect&);
 
 inline IntRect snappedIntRect(const LayoutRect& rect)
 {
-    return IntRect(roundedIntPoint(rect.location()), IntSize(snapSizeToPixel(rect.width(), rect.x()), snapSizeToPixel(rect.height(), rect.y())));
+    return IntRect(roundedIntPoint(rect.location()), snappedIntSize(rect.size(), rect.location()));
 }
 
 inline IntRect snappedIntRect(LayoutUnit left, LayoutUnit top, LayoutUnit width, LayoutUnit height)
 {
-    return IntRect(left.round(), top.round(), snapSizeToPixel(width, left), snapSizeToPixel(height, top));
+    return IntRect(IntPoint(left.round(), top.round()), snappedIntSize(LayoutSize(width, height), LayoutPoint(left, top)));
 }
 
 inline IntRect snappedIntRectFromEdges(LayoutUnit left, LayoutUnit top, LayoutUnit right, LayoutUnit bottom)
 {
-    return IntRect(left.round(), top.round(), snapSizeToPixel(right - left, left), snapSizeToPixel(bottom - top, top));
+    return IntRect(IntPoint(left.round(), top.round()), snappedIntSize(LayoutSize(right - left, bottom - top), LayoutPoint(left, top)));
 }
 
 inline IntRect snappedIntRect(LayoutPoint location, LayoutSize size)
 {
-    return IntRect(roundedIntPoint(location), pixelSnappedIntSize(size, location));
+    return IntRect(roundedIntPoint(location), snappedIntSize(size, location));
 }
 
 FloatRect encloseRectToDevicePixels(const LayoutRect&, float pixelSnappingFactor);
 
 inline FloatRect snapRectToDevicePixels(const LayoutRect& rect, float pixelSnappingFactor)
 {
-    return FloatRect(roundToDevicePixel(rect.x(), pixelSnappingFactor), roundToDevicePixel(rect.y(), pixelSnappingFactor),
-        snapSizeToDevicePixel(rect.width(), rect.x(), pixelSnappingFactor), snapSizeToDevicePixel(rect.height(), rect.y(), pixelSnappingFactor));
+    return FloatRect(FloatPoint(roundToDevicePixel(rect.x(), pixelSnappingFactor), roundToDevicePixel(rect.y(), pixelSnappingFactor)), snapSizeToDevicePixel(rect.size(), rect.location(), pixelSnappingFactor));
 }
 
 inline FloatRect snapRectToDevicePixels(LayoutUnit x, LayoutUnit y, LayoutUnit width, LayoutUnit height, float pixelSnappingFactor)
@@ -242,9 +241,8 @@ inline FloatRect snapRectToDevicePixelsWithWritingDirection(const LayoutRect& re
 {
     if (!ltr) {
         FloatPoint snappedTopRight = roundPointToDevicePixels(rect.maxXMinYCorner(), deviceScaleFactor, ltr);
-        float snappedWidth = snapSizeToDevicePixel(rect.width(), rect.maxX(), deviceScaleFactor);
-        float snappedHeight = snapSizeToDevicePixel(rect.height(), rect.y(), deviceScaleFactor);
-        return FloatRect(snappedTopRight.x() - snappedWidth, snappedTopRight.y(), snappedWidth, snappedHeight);
+        FloatSize snappedSize = snapSizeToDevicePixel(rect.size(), rect.maxXMinYCorner(), deviceScaleFactor);
+        return FloatRect(snappedTopRight.x() - snappedSize.width(), snappedTopRight.y(), snappedSize.width(), snappedSize.height());
     }
     return snapRectToDevicePixels(rect, deviceScaleFactor);
 }
